--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#">Follow Us</a></li>
                     <li><a href="#">Members</a></li>
                     <li><a href="hitung-wr.html">Hitung WR</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="https://simbanih.github.io/">About</a></li>
                 </ul>
             </div>
         </nav>
