--- a/hitung-wr.html
+++ b/hitung-wr.html
@@ -137,6 +137,7 @@
                         <li><a href="https://tiktok.com/@stolidpen" target="_blank" rel="noopener noreferrer">7S StolidPen</a></li>
                         <li><a href="https://tiktok.com/@xienzmlbb" target="_blank" rel="noopener noreferrer">7S XienzzV</a></li>
                         <li><a href="#">7S •SANS•FEB•</a></li>
+                        <li><a href="https://tiktok.com/@zhensukatango_" target="_blank" rel="noopener noreferrer">7S Sir` Zhen.</a></li>
                         <li><a href="https://tiktok.com/@talohbusuk" target="_blank" rel="noopener noreferrer">7S DAPA ツ</a></li>
                         <li><a href="https://tiktok.com/@callmebel31" target="_blank" rel="noopener noreferrer">7S IM Rabel</a></li>
                         <li><a href="#">7S Player Pro</a></li>
