--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="7STREET">
+    <meta name="keywords" content="sevenstreetsq, stolidpen, sevensq ,7street, kalklator, kalkulatorrankml">
+    <meta name="author" content="StolidPen Febriosein">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>7STREET SQUAD</title>
